salesforce/force-app/main/default/objects/Account/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <description>Annual recurring revenue used for renewal risk prioritization.</description>
    <label>ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>